<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <ImageView
        android:id="@+id/circle_me"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginStart="63dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="684dp"
        android:contentDescription="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/circle_me" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="630dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/name"
            android:paddingStart="20dp"
            android:paddingEnd="14dp"
            android:src="@drawable/person" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon2"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="537dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/birthday"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/birthday" />

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon1"
            android:gravity="center_vertical"
            android:text="@string/birthday"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="440dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/language"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/language" />

        <TextView
            android:id="@+id/language"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon3"
            android:gravity="center_vertical"
            android:text="@string/language"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="350dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/from"
            android:paddingStart="20dp"
            android:paddingEnd="14dp"
            android:src="@drawable/from" />

        <TextView
            android:id="@+id/from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon4"
            android:gravity="center_vertical"
            android:text="@string/from"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="265dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <ImageView
            android:id="@+id/icon5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/lives"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/live" />

        <TextView
            android:id="@+id/live"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon5"
            android:gravity="center_vertical"
            android:text="@string/lives"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="170dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon6"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/hobby"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:src="@drawable/love" />

        <TextView
            android:id="@+id/love"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon6"
            android:gravity="center_vertical"
            android:text="@string/hobby"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="80dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon7"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/season"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:src="@drawable/season" />

        <TextView
            android:id="@+id/season"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon7"
            android:gravity="center_vertical"
            android:text="@string/season"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="10dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

        <ImageView
            android:id="@+id/icon8"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/book"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/book"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon8"
            android:gravity="center_vertical"
            android:text="@string/book"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="198dp"
        android:layout_marginBottom="10dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <ImageView
            android:id="@+id/icon9"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/website"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            android:src="@drawable/website" />

        <TextView
            android:id="@+id/website"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon9"
            android:gravity="center_vertical"
            android:text="@string/website"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64">

        <ImageView
            android:id="@+id/icon10"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/email"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/icon10"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/primary"
            android:textSize="21sp"
            android:textStyle="normal" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>